<?xml version="1.0"?>
<package format="2">
  <name>slic3r_wrapper</name>
  <version>1.3.0</version>
  <description>
    libslic3r catkin package wrapper
  </description>
  <maintainer email="astrizhkin@biarum.com">Andrey Strizhkin</maintainer>
  <author email="astrizhkin@biarum.com">Andrey Strizhkin</author>
  <license>AGPL-3.0 license</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>